#设置所需最小版本为 2.8.11
cmake_minimum_required(VERSION 2.8.11)

#设置工程名
project(TCP_IP_Network_Program)


add_subdirectory(Chapter01 Chapter01)
add_subdirectory(Chapter04 Chapter04)

add_subdirectory(Chapter05 Chapter05)
add_subdirectory(Chapter06 Chapter06)
add_subdirectory(Chapter07 Chapter07)
add_subdirectory(Chapter08 Chapter08)
add_subdirectory(Chapter09 Chapter09)

add_subdirectory(Chapter12 Chapter12)
add_subdirectory(Chapter20 Chapter20)
add_subdirectory(Chapter21 Chapter21)
add_subdirectory(Chapter22 Chapter22)

